IDEX-3049, IDEX-3319, IDEX-3449, IDEX-3450
Tree changes:

in node renderer changed manipulations with html, now work performs with dom nodes
added possibility to customize node styles directly from node by css
added method to refresh visual representation of specified node without reloading
temporary disable inner checking for child in child, to proper rendering ">" symbol
fixed setting parent after node intercepting, in some cases few nodes was without parent
updated mechanism of firing changing selection node event
Upgraded behaviour when expanded node renames. Now expanded nodes saves their state
In some cases directory structure may be changed if renamed directory becomes source directory

Machie's project path requests only when ide starts to avoid unneccessary requests during selection change

Get project method in project service now returns Project Descriptos instead of Project Reference
This was need to avoid unneccessary requests to get project when we open it

Projects are always opened now. We can't close or open it. For now we can create or delete it

After init or delete git repository project explorer doesn't go crazy

Adapt Privacy Action to work with project explorer selection change

Remove experimental speed search from the Project Explorer

Hide/show lock icon when current project become a null

===

Squashed commit of the following:

commit e2255035fdf6667e0946513738211c9ea0d5faf8
Author: Vladyslav Zhukovskii <vzhukovskii@codenvy.com>
Date:   Thu Nov 5 19:46:13 2015 +0200

    Hide/show lock icon when current project become a null.
    Fix showing source directory for multi-module project.
    Scroll into node, when ones added in the tree.
    Mark module node with bold font style.

commit 9f142a961bc1c132c8535fe47acf3a7221004d91
Author: Vladyslav Zhukovskii <vzhukovskii@codenvy.com>
Date:   Thu Nov 5 18:15:17 2015 +0200

    Remove unnecessary DtoUtil class and fix setting project reference to child elements

commit a3a3efe18a02a9005055d6d60297

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -272,3 +272,11 @@ ext.server.stopped=Extension server stopped...
 workspace.start.failed=Workspace {0} starting is failed.
 start.ws.error.title=Start Workspace Error
 start.ws.error.content=Workspace {0} failed to start. The reason: {1}. Try restarting it, start existing workspace or create a new one.
+
+############# Project Explorer ##########
+project.explorer.project.configuration.failed=Project configuration was failed.
+project.explorer.project.update.failed=Project update was failed.
+project.explorer.projects.load.failed=Failed to load projects list.
+project.explorer.detected.unconfigured.project=Detected non-valid project which should be configured.
+project.explorer.extension.server.stopped=Extension server stopped. Project explorer will be truncated.
+project.explorer.part.tooltip=This View helps you to do basic operation with your projects.
