IDEX-3284: Show all Hotkey that available in Che

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -106,6 +106,21 @@ format.description = Formatter of Code
 undo.name = Undo
 undo.description = Undo the most recent document action.
 
+############### Switch to left editor tab ###############################
+switch.to.left.editor.action = Next editor
+switch.to.left.editor.action.description = Switch to left editor tab
+
+############### Switch to right editor tab ###############################
+switch.to.right.editor.action = Previous editor
+switch.to.right.editor.action.description = Switch to right editor tab
+
+############# List HotKeys ##########
+hot.keys.action.name=HotKeys
+hot.keys.action.description=List HotKeys for IDE and editor
+hot.keys.dialog.title=Actions
+hot.keys.table.action.description.title=Action
+hot.keys.table.item.title=Hot Key
+
 ############### Redo ###############################
 redo.name = Redo
 redo.description = Redo the last undone document action.
